--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.url=jdbc:sqlite:test1.db
 spring.datasource.username=
 spring.datasource.password=
+spring.devtools.remote.restart.enabled=true
+spring.devtools.livereload.enabled=true
